--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
@@ -1,3 +1,5 @@
+<app-breadcrumb [route]="breadcrumb" ></app-breadcrumb>
+
 <!-- form search -->
 <div class="ui top attached header">
   <span>ค้นหาข้อมูลแสตมป์</span>
@@ -46,7 +48,7 @@
     <div class="inline fields  ui grid">
       <div class="one wide field "></div>
       <div class="three wide field ">
-        <label>วันที่เริ่มต้น</label>
+        <label class="text-right">วันที่เริ่มต้น</label>
       </div>
       <div class="four wide field ">
         <div class="ui calendar width100" id="dateF">
@@ -57,7 +59,7 @@
         </div>
       </div>
       <div class="three wide field ">
-        <label>วันนี้สิ้นสุด</label>
+        <label class="text-right">วันนี้สิ้นสุด</label>
       </div>
       <div class="four wide field ">
         <div class="ui input">
