--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-2/int05-1-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-2/int05-1-1-2.component.html
@@ -1,3 +1,5 @@
+<app-breadcrumb [route]="breadcrumb" ></app-breadcrumb>
+
 <!-- table -->
     <div class="ui top attached header">
         <span>สรุปแสตมป์รายปีงบประมาณ</span>
