--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-3/int05-1-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-3/int05-1-1-3.component.html
@@ -1,7 +1,7 @@
+<app-breadcrumb [route]="breadcrumb" ></app-breadcrumb>
+
 <div class="ui grid">
     <div class="sixteen wide column">
-        <h2 class="ui header">เพิ่มข้อมูลแสตมป์</h2>
-
         <div class="ui top attached header">
             <span>เพิ่มข้อมูลแสตมป์</span>
         </div>
