--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
@@ -34,7 +34,7 @@
         <div class="inline fields  ui grid">
           <div class="one wide field "></div>
           <div class="three wide field ">
-            <label>วันที่เริ่มต้น</label>
+            <label class="text-right full-width">วันที่เริ่มต้น</label>
           </div>
           <div class="four wide field ">
             <div class="ui calendar width100" id="dateF">
@@ -45,8 +45,8 @@
               </div>
             </div>
           </div>
-          <div class="three wide field ">
-            <label>วันนี้สิ้นสุด</label>
+          <div class="one wide field ">
+            <label class="text-right full-width">วันนี้สิ้นสุด</label>
           </div>
           <div class="four wide field ">
             <div class="ui input">
@@ -59,12 +59,12 @@
               </div>
             </div>
           </div>
-          <div class="one wide field "></div>
-        </div><br>
+          <div class="three wide field "></div>
+        </div><br><br>
         <div class="ui stackable center aligned page grid">
-          <button class="ui mini primary button" type="button" (click)="onSearch()"><i class="search icon"></i> ค้นหา</button>
-          <button class="ui mini gray button " type="button" (click)="onClear()"><i class="delete icon"></i> ล้างข้อมูล</button>
-          <button class="ui mini primary button" routerLink="/int05/1/1/3"><i class="add icon"></i>เพิ่มข้อมูล</button>
+          <button class="ui mini primary button" type="button" (click)="onSearch()">ค้นหา</button>
+          <button class="ui mini gray button " type="button" (click)="onClear()">ล้างข้อมูล</button>
+          <button class="ui mini primary button" routerLink="/int05/1/1/3">เพิ่มข้อมูล</button>
         </div><br>
       </form>
     </div>
