--- a/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
@@ -11,6 +11,12 @@
             <ui-buttons></ui-buttons>
         </div>
     </div>
+    <div class="sixteen wide column" id="forms">
+        <div class="ui top attached header">Forms</div>
+        <div class="ui secondary bottom attached segment">
+            <ui-forms></ui-forms>
+        </div>
+    </div>
     <div class="sixteen wide column" id="segments">
         <div class="ui top attached header">Segments</div>
         <div class="ui secondary bottom attached segment">
