int0611 by toptee

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1.component.html
@@ -69,7 +69,7 @@
       </form>
     </div>
     <!--table-->
-    <div class="ui segment">
+    <div class="ui segment {{loading ? 'loading' : ''}}">
       <table id="dataTable" class="ui small celled table nowrap" style="width: 100%">
         <thead>
           <tr style="text-align: center;">
