--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
@@ -81,7 +81,7 @@
   </form>
 </div>
 <!-- form search -->
-<div class="ui segment">
+<div class="ui segment {{loading ? 'loading' : ''}}">
   <table id="dataTable" class="ui small celled table nowrap" style="width: 100%">
     <thead>
       <tr style="text-align: center;">
