--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -135,7 +135,7 @@
             <div class="ui simple dropdown item " *ngIf="authService.renderByPage('int06')">
                 <i class="dropdown icon "></i> ตรวจสอบเบิกจ่าย
                 <div class="menu ">
-                    <a class="item " [routerLink]="[ '/int06/1'] " *ngIf="authService.renderByPage('int06/1')"
+                    <a class="item " [routerLink]="[ '/int06/1/1'] " *ngIf="authService.renderByPage('int06/1')"
                         routerLinkActive="active ">ตรวจค่าใช้จ่าย</a>
                     <a class="item " [routerLink]="[ '/int06/2'] " *ngIf="authService.renderByPage('int06/2')"
                         routerLinkActive="active ">ตรวจสรุปรายการขอเบิก</a>
